googleVis 0.3.4 [2012-01-26]
----------------------------

Changes

 * Changed the load mechanism for the Google API from http to https
   again. Thanks to Jacques Philip. 

 * Changed package dependencies to imports in DESCRIPTION. 
   Thanks to Suraj Gupta for pointing this out.

 * Separated out the R.rsp example in demo googleVis to demo Rrsp.

 * Added FAQ section to vignette.

Bug Fixes

 * jsDisplayChart didn't check if google visualization is already loaded.
   Many thanks to Mark Melling reporting the issue and providing a solution.


googleVis 0.3.3 [2012-11-12]
----------------------------

Changes

 * Clarified the usage of the argument state in the help file of
   gvisMotionChart. Thanks to Leonardo Trabuco 


googleVis 0.3.3 [2012-10-31]
----------------------------

Bug Fixes

 * plot.gvis didn't open a browser window when options(gvis.plot.tag)
   was not set to NULL, but the user explicitly called plot.gvis with tag
   NULL. Thanks to Sebastian Kranz for reporting this bug. 

googleVis 0.3.2 [2012-10-28]
----------------------------

NEW FEATURES

 * plot.gvis gained the argument 'tag', which works similar to the
   argument of the same name in print.gvis. By default the tag
   argument is NULL and plot.gvis has the same behaviour as in the
   previous versions of googleVis. 
   However, the argument can be set outside plot.gvis via
   options(gvis.plot.tag=...). This allows users to switch plot
   statements into print statements by changing only one setting. This
   is particular useful when googleVis is used in combination with
   knitr or R.rsp. Setting options(plot.gvis.tag="chart") will ensure
   that plot(gvisOutput) statements will be included into the final
   HTML output. See the help file to plot.gvis and vignette for more
   details. 

Changes

 * The tag argument of print.gvis can be set globally from outside the
   function via options(gvis.print.tag)

 * The vignette has a new section describing how to set the